==> yulei/qmk_firmware/tmk_core/protocol/chibios/adafruit_ble.cpp <==
#include "adafruit_ble.h"
#include <stdio.h>
#include <stdlib.h>
#include <alloca.h>
#include <string.h>
#include <hal.h>
#include "config_common.h"
#include "progmem.h"
#include "wait.h"
#include "debug.h"
#include "timer.h"
#include "action_util.h"
#include "ringbuffer.hpp"
#include "spi.h"
#define AdafruitBleResetPort GPIOA
#define AdafruitBleResetPin 2
#define AdafruitBleCSPort GPIOA
#define AdafruitBleCSPin 4
#define AdafruitBleIRQPort GPIOA
#define AdafruitBleIRQPin 3
#define PGM_P const char*
#define memcpy_P  memcpy
#define strcmp_P  strcmp
#define strcpy_P  strcpy
#define strlen_P  strlen
#define SAMPLE_BATTERY
#define ConnectionUpdateInterval 1000 /* milliseconds */
#define ProbedEvents 1
#define UsingEvents 2
#define SdepMaxPayload 16

static bool sdep_send_pkt(const struct sdep_msg *msg, uint16_t timeout) {
  SPI_begin();

  SPI_select();
  //wait_us(SdepWait);

  uint16_t timerStart = timer_read();
  bool success = false;
  bool ready = false;

  do {
    ready = SPI_send_byte(msg->type) != SdepSlaveNotReady;
    if (ready) {
      break;
    }

    // Release it and let it initialize
    SPI_unselect();
    wait_us(SdepBackOff);
    SPI_select();
  } while (timer_elapsed(timerStart) < timeout);

  if (ready) {
    // Slave is ready; send the rest of the packet
    SPI_send(&msg->cmd_low, sizeof(*msg) - (1 + sizeof(msg->payload)) + msg->len);
    success = true;
  }

  SPI_unselect();
  SPI_end();
  return success;
}

static bool sdep_recv_pkt(struct sdep_msg *msg, uint16_t timeout) {
  bool success = false;
  uint16_t timerStart = timer_read();
  bool ready = false;

  do {
    ready = palReadPad(AdafruitBleIRQPort, AdafruitBleIRQPin);
    if (ready) {
      break;
    }
    wait_us(1);
  } while (timer_elapsed(timerStart) < timeout);

  if (ready) {
    SPI_begin();
    SPI_select();
    //wait_us(SdepWait);

    do {
      // Read the command type, waiting for the data to be ready
      SPI_recv(&msg->type, 1);
      if (msg->type == SdepSlaveNotReady || msg->type == SdepSlaveOverflow) {
        // Release it and let it initialize
        SPI_unselect();
        wait_us(SdepBackOff);
        SPI_select();
        continue;
      }

      // Read the rest of the header
      SPI_recv(&msg->cmd_low, sizeof(*msg) - (1 + sizeof(msg->payload)));

      // and get the payload if there is any
      if (msg->len <= SdepMaxPayload) {
        SPI_recv(msg->payload, msg->len);
      }
      success = true;
      break;
    } while (timer_elapsed(timerStart) < timeout);

    SPI_unselect();
    SPI_end();
  }
  return success;
}

static void resp_buf_read_one(bool greedy) {
  uint16_t last_send;
  if (!resp_buf.peek(last_send)) {
    return;
  }

  if (palReadPad(AdafruitBleIRQPort, AdafruitBleIRQPin)) {
    struct sdep_msg msg;

again:
    if (sdep_recv_pkt(&msg, SdepTimeout)) {
      if (!msg.more) {
        // We got it; consume this entry
        resp_buf.get(last_send);
        dprintf("recv latency %dms\n", TIMER_DIFF_16(timer_read(), last_send));
      }

      if (greedy && resp_buf.peek(last_send) && palReadPad(AdafruitBleIRQPort, AdafruitBleIRQPin)){//digitalRead(AdafruitBleIRQPin)) {
        goto again;
      }
    }

  } else if (timer_elapsed(last_send) > SdepTimeout * 2) {
    dprintf("waiting_for_result: timeout, resp_buf size %d\n",
            (int)resp_buf.size());

    // Timed out: consume this entry
    resp_buf.get(last_send);
  }
}

static void send_buf_send_one(uint16_t timeout = SdepTimeout) {
  struct queue_item item;

  // Don't send anything more until we get an ACK
  if (!resp_buf.empty()) {
    return;
  }

  if (!send_buf.peek(item)) {
    return;
  }
  if (process_queue_item(&item, timeout)) {
    // commit that peek
    send_buf.get(item);
    dprintf("send_buf_send_one: have %d remaining\n", (int)send_buf.size());
  } else {
    dprint("failed to send, will retry\n");
    wait_ms(SdepTimeout);
    resp_buf_read_one(true);
  }
}

static bool ble_init(void) {
  state.initialized = false;
  state.configured = false;
  state.is_connected = false;

  palSetPadMode(AdafruitBleIRQPort, AdafruitBleIRQPin, PAL_MODE_INPUT_PULLDOWN);

  SPI_init();

  // Perform a hardware reset
  palSetPadMode(AdafruitBleResetPort, AdafruitBleResetPin, PAL_MODE_OUTPUT_PUSHPULL);
  palSetPad(AdafruitBleResetPort, AdafruitBleResetPin);
  palClearPad(AdafruitBleResetPort, AdafruitBleResetPin);
  wait_ms(10);
  palSetPad(AdafruitBleResetPort, AdafruitBleResetPin);

  wait_ms(1000); // Give it a second to initialize

  state.initialized = true;
  return state.initialized;
}

void adafruit_ble_task(void) {
  char resbuf[48];

  if (!state.configured && !adafruit_ble_enable_keyboard()) {
    return;
  }
  resp_buf_read_one(true);
  send_buf_send_one(SdepShortTimeout);

  if (resp_buf.empty() && (state.event_flags & UsingEvents) && palReadPad(AdafruitBleIRQPort, AdafruitBleIRQPin)) {
    // Must be an event update
    if (at_command_P(PSTR("AT+EVENTSTATUS"), resbuf, sizeof(resbuf))) {
      uint32_t mask = strtoul(resbuf, NULL, 16);

      if (mask & BleSystemConnected) {
        set_connected(true);
      } else if (mask & BleSystemDisconnected) {
        set_connected(false);
      }
    }
  }

  if (timer_elapsed(state.last_connection_update) > ConnectionUpdateInterval) {
    bool shouldPoll = true;
    if (!(state.event_flags & ProbedEvents)) {
      // Request notifications about connection status changes.
      // This only works in SPIFRIEND firmware > 0.6.7, which is why
      // we check for this conditionally here.
      // Note that at the time of writing, HID reports only work correctly
      // with Apple products on firmware version 0.6.7!
      // https://forums.adafruit.com/viewtopic.php?f=8&t=104052
      if (at_command_P(PSTR("AT+EVENTENABLE=0x1"), resbuf, sizeof(resbuf))) {
        at_command_P(PSTR("AT+EVENTENABLE=0x2"), resbuf, sizeof(resbuf));
        state.event_flags |= UsingEvents;
      }
      state.event_flags |= ProbedEvents;

      // leave shouldPoll == true so that we check at least once
      // before relying solely on events
    } else {
      shouldPoll = false;
    }

    static const char kGetConn[] PROGMEM = "AT+GAPGETCONN";
    state.last_connection_update = timer_read();

    if (at_command_P(kGetConn, resbuf, sizeof(resbuf))) {
      set_connected(atoi(resbuf));
    }
  }

#ifdef SAMPLE_BATTERY
  // I don't know if this really does anything useful yet; the reported
  // voltage level always seems to be around 3200mV.  We may want to just rip
  // this code out.
  if (timer_elapsed(state.last_battery_update) > BatteryUpdateInterval &&
      resp_buf.empty()) {
    state.last_battery_update = timer_read();

    if (at_command_P(PSTR("AT+HWVBAT"), resbuf, sizeof(resbuf))) {
      state.vbat = atoi(resbuf);
    }
  }
#endif
}
